--- a/src/patternfly/components/BackToTop/back-to-top.scss
+++ b/src/patternfly/components/BackToTop/back-to-top.scss
@@ -1,9 +1,9 @@
 @use '../../sass-utilities' as *;
 
 :where(:root, .#{$back-to-top}) {
-  --#{$back-to-top}--InlineEnd: var(--pf-t--global--spacer--2xl);
-  --#{$back-to-top}--BlockEnd: var(--pf-t--global--spacer--lg);
-  --#{$back-to-top}--md--BlockEnd: var(--pf-t--global--spacer--2xl);
+  --#{$back-to-top}--InsetInlineEnd: var(--pf-t--global--spacer--2xl);
+  --#{$back-to-top}--InsetBlockEnd: var(--pf-t--global--spacer--lg);
+  --#{$back-to-top}--md--InsetBlockEnd: var(--pf-t--global--spacer--2xl);
   --#{$back-to-top}--c-button--FontSize: var(--pf-t--global--font--size--body--sm);
   --#{$back-to-top}--c-button--PaddingBlockStart: var(--pf-t--global--spacer--xs);
   --#{$back-to-top}--c-button--PaddingInlineEnd: var(--pf-t--global--spacer--sm);
@@ -12,14 +12,14 @@
   --#{$back-to-top}--c-button--BoxShadow: var(--pf-t--global--box-shadow--sm);
 
   @media (min-width: $pf-v6-global--breakpoint--md) {
-    --#{$back-to-top}--BlockEnd: var(--#{$back-to-top}--md--BlockEnd);
+    --#{$back-to-top}--InsetBlockEnd: var(--#{$back-to-top}--md--InsetBlockEnd);
   }
 }
 
 .#{$back-to-top} {
   position: absolute;
-  inset-block-end: var(--#{$back-to-top}--BlockEnd);
-  inset-inline-end: var(--#{$back-to-top}--InlineEnd);
+  inset-block-end: var(--#{$back-to-top}--InsetBlockEnd);
+  inset-inline-end: var(--#{$back-to-top}--InsetInlineEnd);
 
   &.pf-m-hidden {
     display: none;
