--- a/src/patternfly/components/Page/page.scss
+++ b/src/patternfly/components/Page/page.scss
@@ -392,7 +392,7 @@ $pf-page-v6--height-breakpoint-map: build-breakpoint-map("base", "sm", "md", "lg
       --#{$context-selector}__toggle--BorderInlineEndColor: transparent;
       --#{$context-selector}__toggle--BorderBlockEndColor: var(--#{$page}__sidebar-body--m-menu--c-context-selector--BorderBlockEndColor);
       --#{$context-selector}__toggle--BorderInlineStartColor: transparent;
-      --#{$context-selector}__menu--BlockStart: 100%;
+      --#{$context-selector}__menu--InsetBlockStart: 100%;
 
       width: 100%;
     }
