--- a/src/patternfly/components/Popover/popover.scss
+++ b/src/patternfly/components/Popover/popover.scss
@@ -41,14 +41,14 @@
   --#{$popover}__arrow--m-left--TranslateX: 50%;
   --#{$popover}__arrow--m-left--TranslateY: -50%;
   --#{$popover}__arrow--m-left--Rotate: 45deg;
-  --#{$popover}__arrow--m-inline-top--BlockStart: var(--pf-t--global--border--radius--medium);
-  --#{$popover}__arrow--m-inline-bottom--BlockEnd: var(--pf-t--global--border--radius--medium);
-  --#{$popover}__arrow--m-block-left--InlineStart: var(--pf-t--global--border--radius--medium);
-  --#{$popover}__arrow--m-block-right--InlineEnd: var(--pf-t--global--border--radius--medium);
+  --#{$popover}__arrow--m-inline-top--InsetBlockStart: var(--pf-t--global--border--radius--medium);
+  --#{$popover}__arrow--m-inline-bottom--InsetBlockEnd: var(--pf-t--global--border--radius--medium);
+  --#{$popover}__arrow--m-block-left--InsetInlineStart: var(--pf-t--global--border--radius--medium);
+  --#{$popover}__arrow--m-block-right--InsetInlineEnd: var(--pf-t--global--border--radius--medium);
 
   // Close
-  --#{$popover}__close--BlockStart: calc(var(--#{$popover}__content--PaddingBlockStart) - (var(--pf-t--global--spacer--control--vertical--compact) * 1.5)); // align top of button with top of text
-  --#{$popover}__close--InlineEnd: var(--#{$popover}__content--PaddingInlineEnd); // align right of content
+  --#{$popover}__close--InsetBlockStart: calc(var(--#{$popover}__content--PaddingBlockStart) - (var(--pf-t--global--spacer--control--vertical--compact) * 1.5)); // align top of button with top of text
+  --#{$popover}__close--InsetInlineEnd: var(--#{$popover}__content--PaddingInlineEnd); // align right of content
   --#{$popover}__close--sibling--PaddingInlineEnd: var(--pf-t--global--spacer--2xl);
 
   // Header
@@ -95,8 +95,8 @@
     .pf-m-top-left,
     .pf-m-top-right
   ) {
-    --#{$popover}__arrow--BlockEnd: var(--#{$popover}--m-top--BlockEnd, 0);
-    --#{$popover}__arrow--InlineStart: var(--#{$popover}--m-top--InlineStart, 50%);
+    --#{$popover}__arrow--InsetBlockEnd: var(--#{$popover}--m-top--InsetBlockEnd, 0);
+    --#{$popover}__arrow--InsetInlineStart: var(--#{$popover}--m-top--InsetInlineStart, 50%);
     --#{$popover}__arrow--TranslateX: var(--#{$popover}__arrow--m-top--TranslateX);
     --#{$popover}__arrow--TranslateY: var(--#{$popover}__arrow--m-top--TranslateY);
     --#{$popover}__arrow--Rotate: var(--#{$popover}__arrow--m-top--Rotate);
@@ -107,8 +107,8 @@
     .pf-m-bottom-left,
     .pf-m-bottom-right
   ) {
-    --#{$popover}__arrow--BlockStart: var(--#{$popover}--m-bottom--BlockStart, 0);
-    --#{$popover}__arrow--InlineStart: var(--#{$popover}--m-bottom--InlineStart, 50%);
+    --#{$popover}__arrow--InsetBlockStart: var(--#{$popover}--m-bottom--InsetBlockStart, 0);
+    --#{$popover}__arrow--InsetInlineStart: var(--#{$popover}--m-bottom--InsetInlineStart, 50%);
     --#{$popover}__arrow--TranslateX: var(--#{$popover}__arrow--m-bottom--TranslateX);
     --#{$popover}__arrow--TranslateY: var(--#{$popover}__arrow--m-bottom--TranslateY);
     --#{$popover}__arrow--Rotate: var(--#{$popover}__arrow--m-bottom--Rotate);
@@ -119,8 +119,8 @@
     .pf-m-left-top,
     .pf-m-left-bottom
   ) {
-    --#{$popover}__arrow--BlockStart: var(--#{$popover}--m-left--BlockStart, 50%);
-    --#{$popover}__arrow--InlineEnd: var(--#{$popover}--m-left--InlineEnd, 0);
+    --#{$popover}__arrow--InsetBlockStart: var(--#{$popover}--m-left--InsetBlockStart, 50%);
+    --#{$popover}__arrow--InsetInlineEnd: var(--#{$popover}--m-left--InsetInlineEnd, 0);
     --#{$popover}__arrow--TranslateX: var(--#{$popover}__arrow--m-left--TranslateX);
     --#{$popover}__arrow--TranslateY: var(--#{$popover}__arrow--m-left--TranslateY);
     --#{$popover}__arrow--Rotate: var(--#{$popover}__arrow--m-left--Rotate);
@@ -131,8 +131,8 @@
     .pf-m-right-top,
     .pf-m-right-bottom
   ) {
-    --#{$popover}__arrow--BlockStart: var(--#{$popover}--m-right--BlockStart, 50%);
-    --#{$popover}__arrow--InlineStart: var(--#{$popover}--m-right--InlineStart, 0);
+    --#{$popover}__arrow--InsetBlockStart: var(--#{$popover}--m-right--InsetBlockStart, 50%);
+    --#{$popover}__arrow--InsetInlineStart: var(--#{$popover}--m-right--InsetInlineStart, 0);
     --#{$popover}__arrow--TranslateX: var(--#{$popover}__arrow--m-right--TranslateX);
     --#{$popover}__arrow--TranslateY: var(--#{$popover}__arrow--m-right--TranslateY);
     --#{$popover}__arrow--Rotate: var(--#{$popover}__arrow--m-right--Rotate);
@@ -142,7 +142,7 @@
     .pf-m-left-top,
     .pf-m-right-top
   ) {
-    --#{$popover}__arrow--BlockStart: var(--#{$popover}__arrow--m-inline-top--BlockStart);
+    --#{$popover}__arrow--InsetBlockStart: var(--#{$popover}__arrow--m-inline-top--InsetBlockStart);
     --#{$popover}__arrow--TranslateY: var(--#{$popover}__arrow--m-top--TranslateY);
   }
 
@@ -150,15 +150,15 @@
     .pf-m-left-bottom,
     .pf-m-right-bottom
   ) {
-    --#{$popover}__arrow--BlockStart: auto;
-    --#{$popover}__arrow--BlockEnd: var(--#{$popover}__arrow--m-inline-bottom--BlockEnd);
+    --#{$popover}__arrow--InsetBlockStart: auto;
+    --#{$popover}__arrow--InsetBlockEnd: var(--#{$popover}__arrow--m-inline-bottom--InsetBlockEnd);
   }
 
   &:is(
     .pf-m-top-left,
     .pf-m-bottom-left
   ) {
-    --#{$popover}__arrow--InlineStart: var(--#{$popover}__arrow--m-block-left--InlineStart);
+    --#{$popover}__arrow--InsetInlineStart: var(--#{$popover}__arrow--m-block-left--InsetInlineStart);
     --#{$popover}__arrow--TranslateX: var(--#{$popover}__arrow--m-left--TranslateX);
   }
 
@@ -166,8 +166,8 @@
     .pf-m-top-right,
     .pf-m-bottom-right
   ) {
-    --#{$popover}__arrow--InlineEnd: var(--#{$popover}__arrow--m-block-right--InlineEnd);
-    --#{$popover}__arrow--InlineStart: auto;
+    --#{$popover}__arrow--InsetInlineEnd: var(--#{$popover}__arrow--m-block-right--InsetInlineEnd);
+    --#{$popover}__arrow--InsetInlineStart: auto;
   }
 
   &.pf-m-danger {
@@ -204,8 +204,8 @@
 // Close button
 .#{$popover}__close {
   position: absolute;
-  inset-block-start: var(--#{$popover}__close--BlockStart);
-  inset-inline-end: var(--#{$popover}__close--InlineEnd);
+  inset-block-start: var(--#{$popover}__close--InsetBlockStart);
+  inset-inline-end: var(--#{$popover}__close--InsetInlineEnd);
 
   // Create room for the close button
   + * {
@@ -216,10 +216,10 @@
 .#{$popover}__arrow {
   position: absolute;
   // stylelint-disable liberty/use-logical-spec
-  top: var(--#{$popover}__arrow--BlockStart, auto);
-  right: var(--#{$popover}__arrow--InlineEnd, auto);
-  bottom: var(--#{$popover}__arrow--BlockEnd, auto);
-  left: var(--#{$popover}__arrow--InlineStart, auto);
+  top: var(--#{$popover}__arrow--InsetBlockStart, auto);
+  right: var(--#{$popover}__arrow--InsetInlineEnd, auto);
+  bottom: var(--#{$popover}__arrow--InsetBlockEnd, auto);
+  left: var(--#{$popover}__arrow--InsetInlineStart, auto);
   // stylelint-enable
   width: var(--#{$popover}__arrow--Width);
   height: var(--#{$popover}__arrow--Height);
